[statistics_reporting] Fix sort arrow direction

--- a/modules-available/statistics_reporting/templates/columnChooser.html
+++ b/modules-available/statistics_reporting/templates/columnChooser.html
@@ -93,7 +93,7 @@
 			var th = $(this).find("th");
 			th.find(".arrow").remove();
 			var dir = $.fn.stupidtable.dir;
-			var arrow = data.direction === dir.ASC ? "down" : "up";
+			var arrow = data.direction === dir.ASC ? "up" : "down";
 			th.eq(data.column).append(' <span class="arrow glyphicon glyphicon-chevron-'+arrow+'"></span>');
 		});
 
