--- a/modules-available/statistics_reporting/templates/columnChooser.html
+++ b/modules-available/statistics_reporting/templates/columnChooser.html
@@ -21,7 +21,7 @@
 				<div id="lower-handle" class="ui-slider-handle"></div>
 				<div id="upper-handle" class="ui-slider-handle"></div>
 			</div>
-			<button id="applybound" type="button" class="btn btn-sm btn-primary" onclick="reloadPage()">{{lang_apply}}</button>
+			<button id="applybound" type="button" class="btn btn-sm btn-primary collapse" onclick="reloadPage()">{{lang_apply}}</button>
 			<button id="button-settings" type="button" class="pull-right btn btn-default" data-toggle="modal" data-target="#modal-settings" onclick="loadSettings()"><span class="glyphicon glyphicon-cog"></span></button>
 		</div>
 		<div class="col-md-12 buttonbar">
@@ -37,7 +37,6 @@
 		</div>
 	</div>
 </div>
-
 
 <div id="modal-settings" class="modal fade" role="dialog">
 	<div class="modal-dialog">
