[statistics_reporting] Unify translation handling

--- a/modules-available/statistics_reporting/templates/table-client.html
+++ b/modules-available/statistics_reporting/templates/table-client.html
@@ -8,8 +8,8 @@
 		<th data-sort="int" data-sort-default="desc" class="text-left col_longsessions">{{lang_longSessions}}</th>
 		<th data-sort="int" data-sort-default="desc" class="text-left col_shortsessions">{{lang_shortSessions}}</th>
 		<th data-sort="int" data-sort-default="desc" class="text-left col_timeoffline">{{lang_totalOffTime}}</th>
-		<th data-sort="int" data-sort-default="desc" class="text-left col_lastlogout">{{lang_clientLogout}}</th>
-		<th data-sort="int" data-sort-default="desc" class="text-left col_laststart">{{lang_clientStart}}</th>
+		<th data-sort="int" data-sort-default="desc" class="text-left col_lastlogout">{{lang_lastLogout}}</th>
+		<th data-sort="int" data-sort-default="desc" class="text-left col_laststart">{{lang_lastStart}}</th>
 	</tr>
 	</thead>
 	<tbody>
