--- a/modules-available/statistics_reporting/templates/table-total.html
+++ b/modules-available/statistics_reporting/templates/table-total.html
@@ -6,7 +6,7 @@
 		<th class="text-left col_mediantime">{{lang_medianSessionLength}}</th>
 		<th class="text-left col_longsessions">{{lang_longSessions}}</th>
 		<th class="text-left col_shortsessions">{{lang_shortSessions}}</th>
-		<th class="text-left col_timeoffline">{{lang_overallOfftime}}</th>
+		<th class="text-left col_timeoffline">{{lang_totalOffTime}}</th>
 	</tr>
 	</thead>
 	<tbody>
