--- a/modules-available/statistics_reporting/templates/table-total.html
+++ b/modules-available/statistics_reporting/templates/table-total.html
@@ -2,21 +2,21 @@
 	<thead>
 	<tr>
 		<th class="text-left col-md-2"></th>
-		<th class="text-left col_totaltime">{{lang_totalTime}}</th>
-		<th class="text-left col_mediantime">{{lang_medianSessionLength}}</th>
-		<th class="text-left col_longsessions">{{lang_longSessions}}</th>
-		<th class="text-left col_shortsessions">{{lang_shortSessions}}</th>
-		<th class="text-left col_timeoffline">{{lang_totalOffTime}}</th>
+		<th class="text-left col_totalTime">{{lang_totalTime}}</th>
+		<th class="text-left col_medianSessionLength">{{lang_medianSessionLength}}</th>
+		<th class="text-left col_longSessions">{{lang_longSessions}}</th>
+		<th class="text-left col_shortSessions">{{lang_shortSessions}}</th>
+		<th class="text-left col_totalOffTime">{{lang_totalOffTime}}</th>
 	</tr>
 	</thead>
 	<tbody>
 	<tr>
 		<th class="text-left">{{lang_total}}</th>
-		<td class="text-left col_totaltime">{{data.time_s}}</td>
-		<td class="text-left col_mediantime">{{data.medianTime_s}}</td>
-		<td class="text-left col_longsessions">{{data.sessions}}</td>
-		<td class="text-left col_shortsessions">{{data.shortSessions}}</td>
-		<td class="text-left col_timeoffline">{{data.totalOfftime_s}}</td>
+		<td class="text-left col_totalTime">{{data.time_s}}</td>
+		<td class="text-left col_medianSessionLength">{{data.medianTime_s}}</td>
+		<td class="text-left col_longSessions">{{data.sessions}}</td>
+		<td class="text-left col_shortSessions">{{data.shortSessions}}</td>
+		<td class="text-left col_totalOffTime">{{data.totalOfftime_s}}</td>
 	</tr>
 	</tbody>
 </table>
