[statistics_reporting] Fix location highlighting (do it server side)

--- a/modules-available/statistics_reporting/templates/table-client.html
+++ b/modules-available/statistics_reporting/templates/table-client.html
@@ -16,7 +16,7 @@
 	{{#data}}
 	<tr>
 		<td class="text-left">{{hostname}}</td>
-		<td class="text-left col_location"><a class="locationLink" href="#">{{location}}</a></td>
+		<td class="text-left col_location"><a class="locationLink" href="#" data-lid="{{locationId}}">{{location}}</a></td>
 		<td data-sort-value="{{time}}" class="text-left col_totalTime">{{time_s}}</td>
 		<td data-sort-value="{{medianTime}}" class="text-left col_medianSessionLength">{{medianTime_s}}</td>
 		<td class="text-left col_longSessions">{{sessions}}</td>
