[statistics_reporting] Consistent field naming across classes, templates etc.

--- a/modules-available/statistics_reporting/templates/table-total.html
+++ b/modules-available/statistics_reporting/templates/table-total.html
@@ -12,11 +12,11 @@
 	<tbody>
 	<tr>
 		<th class="text-left">{{lang_total}}</th>
-		<td class="text-left col_totalTime">{{data.time_s}}</td>
-		<td class="text-left col_medianSessionLength">{{data.medianTime_s}}</td>
-		<td class="text-left col_longSessions">{{data.sessions}}</td>
+		<td class="text-left col_totalTime">{{data.totalTime_s}}</td>
+		<td class="text-left col_medianSessionLength">{{data.medianSessionLength_s}}</td>
+		<td class="text-left col_longSessions">{{data.longSessions}}</td>
 		<td class="text-left col_shortSessions">{{data.shortSessions}}</td>
-		<td class="text-left col_totalOffTime">{{data.totalOfftime_s}}</td>
+		<td class="text-left col_totalOffTime">{{data.totalOffTime_s}}</td>
 	</tr>
 	</tbody>
 </table>
