--- a/modules-available/statistics_reporting/templates/table-client.html
+++ b/modules-available/statistics_reporting/templates/table-client.html
@@ -17,11 +17,11 @@
 	<tr>
 		<td class="text-left">{{hostname}}</td>
 		<td class="text-left col_location"><a class="locationLink" href="#" data-lid="{{locationId}}">{{location}}</a></td>
-		<td data-sort-value="{{time}}" class="text-left col_totalTime">{{time_s}}</td>
-		<td data-sort-value="{{medianTime}}" class="text-left col_medianSessionLength">{{medianTime_s}}</td>
-		<td class="text-left col_longSessions">{{sessions}}</td>
+		<td data-sort-value="{{totalTime}}" class="text-left col_totalTime">{{totalTime_s}}</td>
+		<td data-sort-value="{{medianSessionLength}}" class="text-left col_medianSessionLength">{{medianSessionLength_s}}</td>
+		<td class="text-left col_longSessions">{{longSessions}}</td>
 		<td class="text-left col_shortSessions">{{shortSessions}}</td>
-		<td data-sort-value="{{offTime}}" class="text-left col_totalOffTime">{{offTime_s}}</td>
+		<td data-sort-value="{{totalOffTime}}" class="text-left col_totalOffTime">{{totalOffTime_s}}</td>
 		<td data-sort-value="{{lastLogout}}" class="text-left col_lastLogout">{{lastLogout_s}}</td>
 		<td data-sort-value="{{lastStart}}" class="text-left col_lastStart">{{lastStart_s}}</td>
 	</tr>
