--- a/modules-available/statistics_reporting/templates/table-location.html
+++ b/modules-available/statistics_reporting/templates/table-location.html
@@ -13,11 +13,11 @@
 	{{#data}}
 	<tr{{#highlight}} class="info"{{/highlight}}>
 		<td class="locationName text-left">{{location}}</td>
-		<td data-sort-value="{{time}}" class="text-left col_totalTime">{{time_s}}</td>
-		<td data-sort-value="{{medianTime}}" class="text-left col_medianSessionLength">{{medianTime_s}}</td>
-		<td class="text-left col_longSessions">{{sessions}}</td>
+		<td data-sort-value="{{totalTime}}" class="text-left col_totalTime">{{totalTime_s}}</td>
+		<td data-sort-value="{{medianSessionLength}}" class="text-left col_medianSessionLength">{{medianSessionLength_s}}</td>
+		<td class="text-left col_longSessions">{{longSessions}}</td>
 		<td class="text-left col_shortSessions">{{shortSessions}}</td>
-		<td data-sort-value="{{offTime}}" class="text-left col_totalOffTime">{{offTime_s}}</td>
+		<td data-sort-value="{{totalOffTime}}" class="text-left col_totalOffTime">{{totalOffTime_s}}</td>
 	</tr>
 	{{/data}}
 	</tbody>
