[statistics_reporting] Fix my messed up tag order in days selection

--- a/modules-available/statistics_reporting/templates/columnChooser.html
+++ b/modules-available/statistics_reporting/templates/columnChooser.html
@@ -17,7 +17,7 @@
 		<div class="col-md-4">
 			<select name="cutoff" id="select-cutoff" class="form-control">
 				{{#days}}
-				<option value="{{days}}" {{selected}}>{{lang_days}}: {{days}}</option>
+				<option value="{{days}}" {{selected}}>{{days}} {{lang_days}}</option>
 				{{/days}}
 			</select>
 		</div>
